--- a/package.json
+++ b/package.json
@@ -13,17 +13,30 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.15",
+    "@base-ui-components/react": "^1.0.0-alpha.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@mui/material": "^7.0.1",
+    "@tailwindcss/vite": "^4.1.1",
     "chat_app": "file:",
+    "google-libphonenumber": "^3.2.40",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.15"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.4.1",
+    "tailwindcss": "^4.1.1",
+    "validator": "^13.15.0",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^22.13.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/validator": "^13.12.3",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.1",
