--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "axios": "^1.8.4",
     "chat_app": "file:",
     "google-libphonenumber": "^3.2.40",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.1.1",
-    "validator": "^13.15.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
