--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.7",
-    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/material": "^7.0.1",
+    "@mui/icons-material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.1",
     "@tanstack/react-query": "^5.71.5",
     "axios": "^1.8.4",
@@ -30,6 +29,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
