--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.7",
-    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.1",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.12",
